force-app/main/default/objects/Field_Tester__c/Field_Tester__c.object-meta.xml
<CustomObject>
    <description>https://jira.orderbird.com/browse/CRMT-3251</description>
    <label>Field Tester</label>
    <nameField>
        <label>Field Tester Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Testers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>