force-app/main/default/objects/Field_Tester__c/fields/Field_Tester_Status__c.field-meta.xml
<CustomField>
    <fullName>Field_Tester_Status__c</fullName>
    <description>https://jira.orderbird.com/browse/CRMT-3243</description>
    <label>Field Tester Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Active - Tier 1</fullName>
            </value>
            <value>
                <fullName>Active - Tier 2</fullName>
            </value>
            <value>
                <fullName>Active - Tier 3</fullName>
            </value>
            <value>
                <fullName>Active - Tier 4</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Blocked/Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>