force-app/main/default/objects/Field_Tester__c/fields/Link_Tools__c.field-meta.xml
<CustomField>
    <fullName>Link_Tools__c</fullName>
    <label>Link Tools</label>
    <type>Url</type>
</CustomField>