force-app/main/default/objects/Field_Tester__c/fields/Venue_Name__c.field-meta.xml
<CustomField>
    <fullName>Venue_Name__c</fullName>
    <label>Venue Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>