force-app/main/default/objects/Field_Tester__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Venue_Name__c</columns>
    <columns>Field_Tester_Status__c</columns>
    <columns>Link_Tools__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>